Refactoring sonar hints